fix: footer going over the sidenav on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -330,6 +330,7 @@ a:hover {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 5;
     display: none;
     background-color: var(--bg-dark);
   }
